[gd_scene load_steps=71 format=2]

[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-2.png" type="Texture" id=1]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-4.png" type="Texture" id=2]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-1.png" type="Texture" id=3]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-5.png" type="Texture" id=4]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-6.png" type="Texture" id=5]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-8.png" type="Texture" id=6]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-9.png" type="Texture" id=7]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-7.png" type="Texture" id=8]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-3.png" type="Texture" id=9]
[ext_resource path="res://Hud.tscn" type="PackedScene" id=10]
[ext_resource path="res://Control.tscn" type="PackedScene" id=11]
[ext_resource path="res://art/music/Music.mp3" type="AudioStream" id=12]
[ext_resource path="res://art/music/Death.mp3" type="AudioStream" id=13]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-32.png" type="Texture" id=14]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-26.png" type="Texture" id=15]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-24.png" type="Texture" id=16]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-57.png" type="Texture" id=17]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-12.png" type="Texture" id=18]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-22.png" type="Texture" id=19]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-21.png" type="Texture" id=20]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-23.png" type="Texture" id=21]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-36.png" type="Texture" id=22]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-14.png" type="Texture" id=23]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-59.png" type="Texture" id=24]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-58.png" type="Texture" id=25]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-28.png" type="Texture" id=26]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-15.png" type="Texture" id=27]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-10.png" type="Texture" id=28]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-20.png" type="Texture" id=29]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-11.png" type="Texture" id=30]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-37.png" type="Texture" id=31]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-13.png" type="Texture" id=32]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-30.png" type="Texture" id=33]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-18.png" type="Texture" id=34]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-16.png" type="Texture" id=35]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-19.png" type="Texture" id=36]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-39.png" type="Texture" id=37]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-25.png" type="Texture" id=38]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-17.png" type="Texture" id=39]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-35.png" type="Texture" id=40]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-31.png" type="Texture" id=41]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-27.png" type="Texture" id=42]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-29.png" type="Texture" id=43]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-40.png" type="Texture" id=44]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-34.png" type="Texture" id=45]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-33.png" type="Texture" id=46]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-38.png" type="Texture" id=47]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-53.png" type="Texture" id=48]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-43.png" type="Texture" id=49]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-41.png" type="Texture" id=50]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-54.png" type="Texture" id=51]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-44.png" type="Texture" id=52]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-42.png" type="Texture" id=53]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-51.png" type="Texture" id=54]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-49.png" type="Texture" id=55]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-52.png" type="Texture" id=56]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-45.png" type="Texture" id=57]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-50.png" type="Texture" id=58]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-48.png" type="Texture" id=59]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-46.png" type="Texture" id=60]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-47.png" type="Texture" id=61]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-55.png" type="Texture" id=62]
[ext_resource path="res://art/background/2V4d.png/22a3f2d5067a4e748454fd0fc6e1c079cj0leMqkDmBHhDAb-56.png" type="Texture" id=63]
[ext_resource path="res://Score.tscn" type="PackedScene" id=64]
[ext_resource path="res://Main.gd" type="Script" id=65]
[ext_resource path="res://DataBase.tscn" type="PackedScene" id=66]
[ext_resource path="res://virus.tscn" type="PackedScene" id=147]
[ext_resource path="res://Player.tscn" type="PackedScene" id=148]

[sub_resource type="AnimatedTexture" id=4]
flags = 4
frames = 59
fps = 6.0
frame_0/texture = ExtResource( 3 )
frame_1/texture = ExtResource( 1 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 9 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 2 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 4 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 5 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 8 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 6 )
frame_7/delay_sec = 0.0
frame_8/texture = ExtResource( 7 )
frame_8/delay_sec = 0.0
frame_9/texture = ExtResource( 28 )
frame_9/delay_sec = 0.0
frame_10/texture = ExtResource( 30 )
frame_10/delay_sec = 0.0
frame_11/texture = ExtResource( 18 )
frame_11/delay_sec = 0.0
frame_12/texture = ExtResource( 32 )
frame_12/delay_sec = 0.0
frame_13/texture = ExtResource( 23 )
frame_13/delay_sec = 0.0
frame_14/texture = ExtResource( 27 )
frame_14/delay_sec = 0.0
frame_15/texture = ExtResource( 35 )
frame_15/delay_sec = 0.0
frame_16/texture = ExtResource( 39 )
frame_16/delay_sec = 0.0
frame_17/texture = ExtResource( 34 )
frame_17/delay_sec = 0.0
frame_18/texture = ExtResource( 36 )
frame_18/delay_sec = 0.0
frame_19/texture = ExtResource( 29 )
frame_19/delay_sec = 0.0
frame_20/texture = ExtResource( 20 )
frame_20/delay_sec = 0.0
frame_21/texture = ExtResource( 19 )
frame_21/delay_sec = 0.0
frame_22/texture = ExtResource( 21 )
frame_22/delay_sec = 0.0
frame_23/texture = ExtResource( 16 )
frame_23/delay_sec = 0.0
frame_24/texture = ExtResource( 38 )
frame_24/delay_sec = 0.0
frame_25/texture = ExtResource( 15 )
frame_25/delay_sec = 0.0
frame_26/texture = ExtResource( 42 )
frame_26/delay_sec = 0.0
frame_27/texture = ExtResource( 26 )
frame_27/delay_sec = 0.0
frame_28/texture = ExtResource( 43 )
frame_28/delay_sec = 0.0
frame_29/texture = ExtResource( 33 )
frame_29/delay_sec = 0.0
frame_30/texture = ExtResource( 41 )
frame_30/delay_sec = 0.0
frame_31/texture = ExtResource( 14 )
frame_31/delay_sec = 0.0
frame_32/texture = ExtResource( 46 )
frame_32/delay_sec = 0.0
frame_33/texture = ExtResource( 45 )
frame_33/delay_sec = 0.0
frame_34/texture = ExtResource( 40 )
frame_34/delay_sec = 0.0
frame_35/texture = ExtResource( 22 )
frame_35/delay_sec = 0.0
frame_36/texture = ExtResource( 31 )
frame_36/delay_sec = 0.0
frame_37/texture = ExtResource( 47 )
frame_37/delay_sec = 0.0
frame_38/texture = ExtResource( 37 )
frame_38/delay_sec = 0.0
frame_39/texture = ExtResource( 44 )
frame_39/delay_sec = 0.0
frame_40/texture = ExtResource( 50 )
frame_40/delay_sec = 0.0
frame_41/texture = ExtResource( 53 )
frame_41/delay_sec = 0.0
frame_42/texture = ExtResource( 49 )
frame_42/delay_sec = 0.0
frame_43/texture = ExtResource( 52 )
frame_43/delay_sec = 0.0
frame_44/texture = ExtResource( 57 )
frame_44/delay_sec = 0.0
frame_45/texture = ExtResource( 60 )
frame_45/delay_sec = 0.0
frame_46/texture = ExtResource( 61 )
frame_46/delay_sec = 0.0
frame_47/texture = ExtResource( 59 )
frame_47/delay_sec = 0.0
frame_48/texture = ExtResource( 55 )
frame_48/delay_sec = 0.0
frame_49/texture = ExtResource( 58 )
frame_49/delay_sec = 0.0
frame_50/texture = ExtResource( 54 )
frame_50/delay_sec = 0.0
frame_51/texture = ExtResource( 56 )
frame_51/delay_sec = 0.0
frame_52/texture = ExtResource( 48 )
frame_52/delay_sec = 0.0
frame_53/texture = ExtResource( 51 )
frame_53/delay_sec = 0.0
frame_54/texture = ExtResource( 62 )
frame_54/delay_sec = 0.0
frame_55/texture = ExtResource( 63 )
frame_55/delay_sec = 0.0
frame_56/texture = ExtResource( 17 )
frame_56/delay_sec = 0.0
frame_57/texture = ExtResource( 25 )
frame_57/delay_sec = 0.0
frame_58/texture = ExtResource( 24 )
frame_58/delay_sec = 0.0

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1040, 0, 0, 0, 0, 0, 1040, 612 )
}

[node name="Main" type="Node"]
script = ExtResource( 65 )

[node name="Hud" parent="." instance=ExtResource( 10 )]

[node name="TextureRect" type="TextureRect" parent="."]
use_parent_material = true
margin_right = 1024.0
margin_bottom = 600.0
texture = SubResource( 4 )
expand = true

[node name="VirusPath2D" type="Path2D" parent="."]
curve = SubResource( 3 )

[node name="ViruSpawn" type="PathFollow2D" parent="VirusPath2D"]
position = Vector2( 0.00195071, 0 )
offset = 0.00390625

[node name="VirusTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="WiteEndTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Player" parent="." instance=ExtResource( 148 )]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -183, -72 )
stream = ExtResource( 12 )

[node name="Death" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -183, -72 )
stream = ExtResource( 13 )

[node name="virus" parent="." instance=ExtResource( 147 )]
position = Vector2( -183, -72 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" parent="CanvasLayer" instance=ExtResource( 11 )]

[node name="Score" parent="." instance=ExtResource( 64 )]

[node name="DataBase" parent="." instance=ExtResource( 66 )]

[connection signal="start_game" from="Hud" to="." method="new_game"]
[connection signal="timeout" from="VirusTimer" to="." method="_on_VirusTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="hit" from="Player" to="." method="questions"]
[connection signal="Correct" from="CanvasLayer/Control" to="." method="_on_Control_Correct"]
[connection signal="Wrong" from="CanvasLayer/Control" to="." method="_on_Control_Wrong"]
